--- a/XamsungHealth/App.xaml
+++ b/XamsungHealth/App.xaml
@@ -1,8 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamsungHealth.App">
-    <Application.Resources>
-
-    </Application.Resources>
-</Application>
+<Application x:Class="XamsungHealth.App"
+             xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"/>
