--- a/XamsungHealth/MainPage.xaml
+++ b/XamsungHealth/MainPage.xaml
@@ -1,8 +1,60 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage x:Class="XamsungHealth.MainPage"
+             xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamsungHealth.MainPage">
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+             xmlns:local="clr-namespace:XamsungHealth.Controls">
 
-     
+    <!--<ScrollView>
+        <StackLayout Spacing="20"
+                     HorizontalOptions="Center"
+                     VerticalOptions="Center">
+            <controls:ProgressCircle/>
 
+    -->
+    <!--<yummy:PancakeView/>
+            <yummy:PancakeView/>
+            <yummy:PancakeView/>
+            <yummy:PancakeView/>
+            <yummy:PancakeView/>
+            <yummy:PancakeView/>
+            <yummy:PancakeView/>-->
+    <!--
+        </StackLayout>
+    </ScrollView>-->
+
+    <StackLayout>
+        <Grid WidthRequest="200"
+              HeightRequest="200">
+            <Grid.GestureRecognizers>
+                <TapGestureRecognizer Tapped="Handle_Tapped"/>
+            </Grid.GestureRecognizers>
+
+            <local:ProgressCircle x:Name="Progress1" Grid.Row="0" Grid.Column="0"
+                                  Percentage="25"
+                                  ProgressColor="#61FF36"
+                                  ProgressThickness="10"
+                                  InputTransparent="True"
+                                  StartingDegrees="-90"
+                                  Jagged="False"/>
+
+            <StackLayout Grid.Row="0" Grid.Column="0"
+                         IsVisible="true"
+                         VerticalOptions="Center">
+                <Label FontAttributes="Bold"
+                       FontSize="33"
+                       HorizontalTextAlignment="Center"
+                       VerticalTextAlignment="Center"
+                       Text="55744"
+                       TextColor="Black"/>
+
+                <Label FontAttributes="Bold"
+                       FontSize="25"
+                       HorizontalTextAlignment="Center"
+                       VerticalTextAlignment="Center"
+                       Text="100/1000"
+                       TextColor="#827B82"/>
+            </StackLayout>
+        </Grid>
+    </StackLayout>
 </ContentPage>
