--- a/XamsungHealth/MainPage.xaml
+++ b/XamsungHealth/MainPage.xaml
@@ -3,7 +3,8 @@
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
-             xmlns:local="clr-namespace:XamsungHealth.Controls">
+             xmlns:local="clr-namespace:XamsungHealth.Controls"
+             BackgroundColor="WhiteSmoke">
 
     <!--<ScrollView>
         <StackLayout Spacing="20"
@@ -31,13 +32,20 @@
                 <TapGestureRecognizer Tapped="Handle_Tapped"/>
             </Grid.GestureRecognizers>
 
-            <local:ProgressCircle x:Name="Progress1" Grid.Row="0" Grid.Column="0"
-                                  Percentage="80"
-                                  ProgressColor="#61FF36"
-                                  ProgressThickness="12"
-                                  InputTransparent="True"
-                                  MainText="55746"
-                                  Jagged="False"/>
+            <yummy:PancakeView CornerRadius="15"
+                               BackgroundColor="White">
+                <local:ProgressCircle x:Name="Progress1" Grid.Row="0" Grid.Column="0"
+                                      Percentage="80"
+                                      ProgressColor="#36E407"
+                                      ProgressThickness="12"
+                                      InputTransparent="True"
+                                      MainText="8147"
+                                      MainTextFontSize="45"
+                                      SecondaryTextFontSize="13"
+                                      SecondaryText="/10000 steps"/>
+
+            </yummy:PancakeView>
+
 
             <!--<StackLayout Grid.Row="0" Grid.Column="0"
                          IsVisible="true"
