- Switch to Shell + styling - Rename MainPage -> Home - Add Xamarin Community toolkit package.

--- a/XamsungHealth/App.xaml
+++ b/XamsungHealth/App.xaml
@@ -1,4 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application x:Class="XamsungHealth.App"
              xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"/>
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+
+
+    <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="MainBackgroundColor">
+                WhiteSmoke
+            </Color>
+
+            <Style TargetType="{x:Type Tab}">
+                <Setter Property="Shell.TabBarBackgroundColor" Value="White"/>
+                <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
+                <Setter Property="Shell.NavBarHasShadow" Value="False"/>
+                <Setter Property="Shell.NavBarIsVisible" Value="True"/>
+            </Style>
+
+        </ResourceDictionary>
+    </Application.Resources>
+</Application>
