--- a/XamsungHealth/HomePage.xaml
+++ b/XamsungHealth/HomePage.xaml
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage x:Class="XamsungHealth.MainPage"
+<ContentPage x:Class="XamsungHealth.HomePage"
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              xmlns:local="clr-namespace:XamsungHealth.Controls"
-             BackgroundColor="WhiteSmoke">
+             BackgroundColor="{DynamicResource MainBackgroundColor}">
+
+    <!--<Shell.TitleView>
+        <Label Text="fzoez f"
+               TextColor="red"/>
+    </Shell.TitleView>-->
 
     <!--<ScrollView>
         <StackLayout Spacing="20"
