--- a/XamsungHealth/HomePage.xaml
+++ b/XamsungHealth/HomePage.xaml
@@ -3,73 +3,111 @@
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+             xmlns:fontawesome="clr-namespace:XamsungHealth.Lib.Fonts;assembly=XamsungHealth.Lib"
              xmlns:local="clr-namespace:XamsungHealth.Controls"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              BackgroundColor="{DynamicResource MainBackgroundColor}">
 
-    <!--<Shell.TitleView>
-        <Label Text="fzoez f"
-               TextColor="red"/>
-    </Shell.TitleView>-->
+    <Shell.TitleView>
+        <ContentView ControlTemplate="{DynamicResource AppBar}"/>
+    </Shell.TitleView>
 
-    <!--<ScrollView>
-        <StackLayout Spacing="20"
-                     HorizontalOptions="Center"
-                     VerticalOptions="Center">
-            <controls:ProgressCircle/>
+    <ContentPage.Resources>
+        <Style TargetType="{x:Type yummy:PancakeView}">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="BackgroundColor" Value="White"/>
+            <Setter Property="CornerRadius" Value="15"/>
+            <Setter Property="Padding" Value="10"/>
+        </Style>
+        <x:Double x:Key="FontSizeBig">
+            38
+        </x:Double>
+    </ContentPage.Resources>
 
-    -->
-    <!--<yummy:PancakeView/>
-            <yummy:PancakeView/>
-            <yummy:PancakeView/>
-            <yummy:PancakeView/>
-            <yummy:PancakeView/>
-            <yummy:PancakeView/>
-            <yummy:PancakeView/>-->
-    <!--
-        </StackLayout>
-    </ScrollView>-->
+    <ScrollView>
+        <StackLayout Spacing="2.5">
+            <yummy:PancakeView VerticalOptions="FillAndExpand"
+                               HorizontalOptions="Fill">
+                <yummy:PancakeView.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="Handle_Tapped"/>
+                </yummy:PancakeView.GestureRecognizers>
+                <StackLayout>
+                    <Grid>
+                        <ActivityIndicator VerticalOptions="Start"
+                                           HorizontalOptions="End"
+                                           IsRunning="True"
+                                           WidthRequest="20"
+                                           Color="#36E407"/>
 
-    <StackLayout>
-        <Grid Margin="15"
-              WidthRequest="200"
-              HeightRequest="200">
-            <Grid.GestureRecognizers>
-                <TapGestureRecognizer Tapped="Handle_Tapped"/>
-            </Grid.GestureRecognizers>
-
-            <yummy:PancakeView CornerRadius="15"
-                               BackgroundColor="White">
-                <local:ProgressCircle x:Name="Progress1" Grid.Row="0" Grid.Column="0"
-                                      Percentage="80"
-                                      ProgressColor="#36E407"
-                                      ProgressThickness="12"
-                                      InputTransparent="True"
-                                      MainText="8147"
-                                      MainTextFontSize="45"
-                                      SecondaryTextFontSize="13"
-                                      SecondaryText="/10000 steps"/>
-
+                        <local:ProgressCircle x:Name="Progress1" Grid.Row="0" Grid.Column="0"
+                                              Percentage="80"
+                                              WidthRequest="190"
+                                              HeightRequest="190"
+                                              ProgressColor="#36E407"
+                                              ProgressThickness="12"
+                                              InputTransparent="True"
+                                              MainText="8147"
+                                              MainTextFontSize="{StaticResource FontSizeBig}"
+                                              SecondaryTextFontSize="14"
+                                              SecondaryText="/10000 steps"/>
+                    </Grid>
+                    <Grid>
+                        <BoxView WidthRequest="100"
+                                 HeightRequest="2"
+                                 HorizontalOptions="Center"
+                                 VerticalOptions="End"
+                                 Color="Gray"/>
+                        <StackLayout Margin="0,0,0,10"
+                                     Orientation="Horizontal"
+                                     HorizontalOptions="Center">
+                            <BoxView WidthRequest="5"
+                                     VerticalOptions="End"
+                                     HeightRequest="30"
+                                     Color="#36E407"/>
+                            <BoxView WidthRequest="5"
+                                     VerticalOptions="End"
+                                     HeightRequest="35"
+                                     Color="#36E407"/>
+                            <BoxView WidthRequest="5"
+                                     VerticalOptions="End"
+                                     HeightRequest="40"
+                                     Color="#36E407"/>
+                            <BoxView WidthRequest="5"
+                                     VerticalOptions="End"
+                                     HeightRequest="50"
+                                     Color="#36E407"/>
+                        </StackLayout>
+                    </Grid>
+                </StackLayout>
             </yummy:PancakeView>
 
+            <yummy:PancakeView HeightRequest="100">
+                <StackLayout Margin="20,0,0,0"
+                             Spacing="15">
+                    <Grid>
+                        <StackLayout Orientation="Horizontal"
+                                     HorizontalOptions="Start"
+                                     Spacing="15"
+                                     VerticalOptions="Start">
+                            <ImageButton xct:IconTintColorEffect.TintColor="#36E407">
+                                <ImageButton.Source>
+                                    <FontImageSource FontFamily="FontAwesome"
+                                                     Size="20"
+                                                     Glyph="{x:Static fontawesome:IconFont.Clock}"/>
+                                </ImageButton.Source>
+                            </ImageButton>
+                            <Label Text="Active time"
+                                   VerticalOptions="End"/>
+                        </StackLayout>
+                    </Grid>
+                    <Label Text="79"
+                           FontSize="{StaticResource FontSizeBig}"/>
 
-            <!--<StackLayout Grid.Row="0" Grid.Column="0"
-                         IsVisible="true"
-                         HorizontalOptions="Center"
-                         VerticalOptions="Center">
-                <Label FontAttributes="Bold"
-                       FontSize="33"
-                       HorizontalTextAlignment="Center"
-                       VerticalTextAlignment="Center"
-                       Text="55744"
-                       TextColor="Black"/>
+                </StackLayout>
+            </yummy:PancakeView>
+            <yummy:PancakeView HeightRequest="150"/>
+            <yummy:PancakeView/>
+        </StackLayout>
+    </ScrollView>
 
-                <Label FontAttributes="Bold"
-                       FontSize="20"
-                       HorizontalTextAlignment="Center"
-                       VerticalTextAlignment="Center"
-                       Text="100/1000"
-                       TextColor="#827B82"/>
-            </StackLayout>-->
-        </Grid>
-    </StackLayout>
 </ContentPage>
