Latest Samsung Health drop circluar progress for linera one. Housekeeping/refactoring.

--- a/XamsungHealth/App.xaml
+++ b/XamsungHealth/App.xaml
@@ -12,6 +12,10 @@
                 WhiteSmoke
             </Color>
 
+            <Color x:Key="MainGreen">
+                #36E407
+            </Color>
+
             <Style TargetType="{x:Type Tab}">
                 <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource MainBackgroundColor}"/>
                 <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
