--- a/XamsungHealth/App.xaml
+++ b/XamsungHealth/App.xaml
@@ -28,6 +28,15 @@
                 <Setter Property="BackgroundColor" Value="Transparent"/>
             </Style>
 
+            <Style TargetType="{x:Type Label}">
+                <Setter Property="TextColor" Value="Black"/>
+            </Style>
+
+            <Style TargetType="{x:Type Button}">
+                <Setter Property="CornerRadius" Value="15"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+            </Style>
+
             <ControlTemplate x:Key="AppBar">
                 <StackLayout Margin="0,5,0,0"
                              Orientation="Horizontal"
